--- a/Source/Microsoft.Teams.Apps.EmployeeTraining/appsettings.json
+++ b/Source/Microsoft.Teams.Apps.EmployeeTraining/appsettings.json
@@ -26,7 +26,7 @@
   },
   "i18n": {
     "DefaultCulture": "en-US",
-    "SupportedCultures": "en-US"
+    "SupportedCultures": "en-US,tr-TR"
   },
   "RetryPolicy": {
     "medianFirstRetryDelay": 1000,
